--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -4,6 +4,17 @@ on:
   pull_request:
     paths:
       - 'src/**'
+  workflow_dispatch:
+    inputs:
+      target-account:
+        description: "Should be one of dev, staging, prod"
+        required: true
+        default: "dev"
+        type: "choice"
+        options:
+          - dev
+          - staging
+          - prod
 
 jobs:
   pytest:
