--- a/.github/workflows/deploy-src-code.yml
+++ b/.github/workflows/deploy-src-code.yml
@@ -36,5 +36,8 @@ jobs:
           aws configure set region us-east-1  # Adjust region as necessary
 
       - name: Copy files to S3
+        TARGET_ACCOUNT: ${{ github.event.inputs.target-account }}
         run: |
-          aws s3 cp ./src s3://test-deploy-w-dev/ --recursive
+          BUCKET_NAME="test-deploy-w-${TARGET_ACCOUNT}"
+          echo "Uploading to bucket: $BUCKET_NAME"
+          aws s3 cp ./src s3://$BUCKET_NAME/ --recursive
