--- a/.github/workflows/deploy-src-code.yml
+++ b/.github/workflows/deploy-src-code.yml
@@ -36,7 +36,8 @@ jobs:
           aws configure set region us-east-1  # Adjust region as necessary
 
       - name: Copy files to S3
-        TARGET_ACCOUNT: ${{ github.event.inputs.target-account }}
+        env:
+          TARGET_ACCOUNT: ${{ github.event.inputs.target-account }}
         run: |
           BUCKET_NAME="test-deploy-w-${TARGET_ACCOUNT}"
           echo "Uploading to bucket: $BUCKET_NAME"
