--- a/.github/workflows/deploy-src-code.yml
+++ b/.github/workflows/deploy-src-code.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
           aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
-          aws configure set region us-east-1  # Adjust region as necessary
+          aws configure set region us-east-1
 
       - name: Copy files to S3
         env:
